[gd_scene load_steps=3 format=3 uid="uid://cf2htrsxx1m3x"]

[ext_resource type="Script" uid="uid://daxngot57ha8d" path="res://UI/VarList/Vars/texture_variant_layers_var.gd" id="1_ipda3"]
[ext_resource type="PackedScene" uid="uid://bvfase7g7yitn" path="res://UI/VarList/Vars/texture_variant_layer_var.tscn" id="2_bkwga"]

[node name="TextureVariantLayersVar" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_ipda3")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Label"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LayerList" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="texture_variant_layer_var" parent="ScrollContainer/LayerList" instance=ExtResource("2_bkwga")]
layout_mode = 2

[node name="AddButton" type="Button" parent="."]
layout_mode = 2
text = "Add layer"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
